less is faster ? vector addition doesn't look worth it